# warrant-intelligence-starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.http
docs/datasets/: sample_warrants.csv
src/config/: settings.py  urls.py
src/core/: api_urls.py  pagination.py
src/dashboard/: forms.py  urls.py  views.py
src/dashboard/templates/: import.html
src/dashboard/templates/dashboard/: base.html  home.html  map.html  people_list.html
src/etl/: apps.py  rules.py  transform.py  views.py  views.py:Zone.Identifier
src/people/: models.py  serializers.py  views.py
src/warrants/: apps.py  models.py  serializers.py  views.py
src/warrants/management/commands/: import_csv.py
src/warrants/services/: importer.py
tests/: test_people_api.py
